# SmartEnergyForecast

./: LICENSE  README.md  SmartEnergyForecast.py  pyproject.toml  requirements.txt  smart_energy_forecast.py
datasets/: BOM_year.csv  houses_daily_statistics.csv
datasets/weather_melbourne_06.23-05.24/: IDCJDW3050.202306.csv  IDCJDW3050.202307.csv  IDCJDW3050.202308.csv  IDCJDW3050.202309.csv  IDCJDW3050.202310.csv  IDCJDW3050.202311.csv  IDCJDW3050.202312.csv  IDCJDW3050.202401.csv  IDCJDW3050.202402.csv  IDCJDW3050.202403.csv  IDCJDW3050.202404.csv  IDCJDW3050.202405.csv
src/: GUI.py  TableView.py  data_handler.py  date_selector.py  gui.py  plot_panel.py  settings_panel.py  table_view.py  tooltip.py  welcome_page.py
