[project]
name = "SmartEnergyForecast"
version = "0.0.1a"
description = "A Python-based predictive model for the impact of weather patterns on household energy consumption, along with a GUI for data visualization."
authors = ["Tom Horton <tom.horton100@gmail.com>", "Robin Neupane <email@example.com>", "Lochlan Hindle <email@example.com"]

[project.dependencies]
